# sft-backend

./: .gitignore  .pre-commit-config.yaml  README.MD  manage.py  pyproject.toml
api/: urls.py
api/contracts/: serializers.py  views.py
api/credit_applications/: serializers.py  views.py
api/organizations/: serializers.py  views.py
api/products/: serializers.py  views.py
api/users/: serializers.py  views.py
apps/contracts/: admin.py  apps.py  models.py
apps/contracts/migrations/: 0001_initial.py
apps/credit_applications/: admin.py  apps.py  models.py
apps/credit_applications/migrations/: 0001_initial.py  0002_alter_creditapplication_number.py
apps/organizations/: admin.py  apps.py  models.py
apps/organizations/migrations/: 0001_initial.py  0002_initial.py
apps/products/: admin.py  models.py
apps/products/migrations/: 0001_initial.py
apps/users/: admin.py  managers.py  models.py
apps/users/migrations/: 0001_initial.py  0002_user_is_owner.py
core/: authentication.py  permissions.py
sft/: asgi.py  wsgi.py
sft/settings/: common.py
